--- a/www/Login/templates/login.html
+++ b/www/Login/templates/login.html
@@ -1,12 +1,7 @@
-<ion-modal-view>
-  <ion-header-bar>
-    <h1 class="title">Login</h1>
-    <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">Close</button>
-    </div>
-  </ion-header-bar>
-  <ion-content>
-    <form ng-submit="doLogin()">
+<ion-view view-title="Playlist">
+
+  <ion-contentv class="padding">
+    <form ng-submit="LoginCtrl.doLogin()">
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Username</span>
@@ -22,4 +17,4 @@
       </div>
     </form>
   </ion-content>
-</ion-modal-view>
+</ion-view>
