--- a/www/Main/templates/menu.html
+++ b/www/Main/templates/menu.html
@@ -18,19 +18,19 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Login
-        </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Search
-        </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
-        </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
+        <ion-item menu-close ui-sref='logged.home'>
+          Home
         </ion-item>
       </ion-list>
+
+      <div class="row row-bottom">
+        <div class="col">
+          <button menu-close class="button button-block button-assertive" ui-sref="login">
+            Log out
+          </button>
+        </div>
+      </div>
+
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
