--- a/www/Main/templates/home.html
+++ b/www/Main/templates/home.html
@@ -1,6 +1,32 @@
-
 <ion-view view-title="Carsa address book">
-  <ion-content class="padding">
-    <h1>Homepage</h1>
+  <ion-content class="padding mc-bg-color">
+    <div class="row">
+      <div class="col">
+        <dash-card card-type=""
+                   title="Contatti"
+                   bedge="200"
+                   bg-icon=""></dash-card>
+      </div>
+      <div class="col">
+        <dash-card card-type=""
+                   title="Preferiti"
+                   bedge="99"
+                   bg-icon=""></dash-card>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <dash-card card-type=""
+                   title="Messaggi"
+                   bedge="10"
+                   bg-icon=""></dash-card>
+      </div>
+      <div class="col">
+        <dash-card card-type=""
+                   title="Appuntamenti"
+                   bedge="5"
+                   bg-icon=""></dash-card>
+      </div>
+    </div>
   </ion-content>
 </ion-view>
