--- a/www/Main/templates/menu.html
+++ b/www/Main/templates/menu.html
@@ -18,9 +18,23 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ui-sref='logged.home'>
-          Home
+        <ion-item menu-close ui-sref='logged.home' class="item item-icon-right">
+          <i class="icon ion-speedometer assertive"></i> Dashboard
         </ion-item>
+        <ion-item menu-close ui-sref='logged.contacts' class="item item-icon-right">
+          <i class="icon ion-person-stalker dark"></i> Contatti
+        </ion-item>
+        <ion-item menu-close ui-sref='logged.favourites' class="item item-icon-right">
+          <i class="icon ion-ios-star-half positive"></i> Preferiti
+        </ion-item>
+        <ion-item menu-close ui-sref='logged.message' class="item item-icon-right">
+          <i class="icon ion-chatboxes dark"></i> Messaggi
+        </ion-item>
+        <ion-item menu-close ui-sref='logged.calendar' class="item item-icon-right">
+          <i class="icon ion-calendar dark"></i> Calendario
+        </ion-item>
+
+
       </ion-list>
 
       <div class="row row-bottom">
