--- a/www/Main/templates/home.html
+++ b/www/Main/templates/home.html
@@ -2,13 +2,13 @@
   <ion-content class="padding mc-bg-color">
     <div class="row">
       <div class="col">
-        <dash-card card-type=""
+        <dash-card card-type="1"
                    title="Contatti"
                    bedge="200"
-                   bg-icon=""></dash-card>
+                   bg-icon="" ng-click="openDetail()"></dash-card>
       </div>
       <div class="col">
-        <dash-card card-type=""
+        <dash-card card-type="2"
                    title="Preferiti"
                    bedge="99"
                    bg-icon=""></dash-card>
@@ -16,13 +16,13 @@
     </div>
     <div class="row">
       <div class="col">
-        <dash-card card-type=""
+        <dash-card card-type="3"
                    title="Messaggi"
                    bedge="10"
                    bg-icon=""></dash-card>
       </div>
       <div class="col">
-        <dash-card card-type=""
+        <dash-card card-type="4"
                    title="Appuntamenti"
                    bedge="5"
                    bg-icon=""></dash-card>
