--- a/www/Main/templates/menu.html
+++ b/www/Main/templates/menu.html
@@ -39,7 +39,7 @@
 
       <div class="row row-bottom">
         <div class="col">
-          <button menu-close class="button button-block button-assertive" ui-sref="login">
+          <button menu-close class="button button-block button-assertive" ng-click="DashnCtrl.doLogout()">
             Log out
           </button>
         </div>
