--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -75,9 +75,6 @@ $dark:                            #444 !default;
     top: 50px;
     color: rgba(0, 0, 0, 0.07); }
 
-.login .item-floating-label .input-label {
-  font-size: 0.7rem; }
-
 .login .button.button-facebook {
   border-color: transparent;
   background-color: #4267b2;
@@ -108,9 +105,6 @@ $dark:                            #444 !default;
   height: 100px;
   width: 100px;
   border-radius: 50%; }
-
-.signin .item-floating-label .input-label {
-  font-size: 0.7rem; }
 
 .contacts .mc-rounded {
   border-radius: 50%;
@@ -9918,6 +9912,23 @@ a.button {
   opacity: 0;
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
+
+form .item-floating-label .error-message {
+  font-size: 0.7rem;
+  color: #ef473a;
+  padding-top: 5px;
+  float: right; }
+
+form .item-floating-label .input-label {
+  font-size: 0.7rem;
+  color: #387ef5;
+  float: left; }
+
+form .item-input {
+  padding: 5px; }
+  form .item-input .ng-dirty.ng-invalid {
+    border-bottom: 2px solid #ef473a;
+    color: #ef473a; }
 
 .popup-container .popup {
   background-color: #f8f8f8; }
