--- a/www/Main/templates/detail-modal.html
+++ b/www/Main/templates/detail-modal.html
@@ -1,7 +1,9 @@
 <ion-modal-view>
-  <ion-header-bar>
+  <ion-header-bar class="bar-positive">
     <h1 class="title">My Modal title</h1>
-    <a class="button button-assertive icon ion-android-close" ng-click="closeDetail()"></a>
+    <div class="buttons button-right">
+      <button class="button button-clear button-primary" ng-click="closeDetail()"><i class="icon ion-ios-close-outline"></i></button>
+    </div>
   </ion-header-bar>
   <ion-content class="padding">
     Hello!
