--- a/www/Main/templates/menu.html
+++ b/www/Main/templates/menu.html
@@ -13,8 +13,8 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Carsa address book</h1>
+    <ion-header-bar class="bar-positive">
+      <i class="button button-icon icon ion-ios-bookmarks"></i><h1 class="title">My address book</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
