--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -113,6 +113,16 @@ $dark:                            #444 !default;
   right: 5px;
   bottom: 5px; }
 
+.contacts ion-option-button.button {
+  min-width: 0px; }
+
+.contacts a.favourites {
+  font-size: 2rem;
+  float: right;
+  position: absolute;
+  top: 25%;
+  right: 15px; }
+
 /*!
   Ionicons, v2.0.1
   Created by Ben Sperry for the Ionic Framework, http://ionicons.com/
@@ -9913,6 +9923,48 @@ a.button {
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
 
+.popup {
+  border-radius: 5px !important; }
+  .popup .popup-head {
+    background: #387ef5;
+    border-radius: 5px 5px 0px 0px;
+    padding: 5px; }
+    .popup .popup-head .popup-title {
+      color: #fff; }
+    .popup .popup-head .popup-sub-title {
+      color: #fff; }
+  .popup .popup-body textarea {
+    min-height: 250px; }
+  .popup .popup-buttons {
+    border-radius: 0px 0px 5px 5px; }
+
+a.modal-close-button {
+  border: 2px solid #ef473a;
+  border-radius: 50% !important;
+  color: #ef473a;
+  float: right; }
+
+form .list {
+  border-top: 1px solid #d0d0d0;
+  border-left: 1px solid #d0d0d0;
+  border-right: 1px solid #d0d0d0; }
+
+form .gender {
+  border: 0; }
+  form .gender .list {
+    border: 0;
+    padding: 3px; }
+    form .gender .list .item-radio {
+      border: 0; }
+      form .gender .list .item-radio .radio-content .item-content {
+        padding: 5px 20px;
+        color: #387ef5; }
+      form .gender .list .item-radio .radio-content .radio-icon {
+        padding: 5px;
+        margin-right: 15px;
+        font-size: 1rem;
+        color: #387ef5; }
+
 form .item-floating-label .error-message {
   font-size: 0.7rem;
   color: #ef473a;
@@ -9925,8 +9977,11 @@ form .item-floating-label .input-label {
   float: left; }
 
 form .item-input {
+  border: 0px;
   padding: 5px; }
-  form .item-input .ng-dirty.ng-invalid {
+  form .item-input input {
+    border-bottom: 1px solid #d0d0d0; }
+  form .item-input input.ng-dirty.ng-invalid {
     border-bottom: 2px solid #ef473a;
     color: #ef473a; }
 
