--- a/www/Main/templates/menu.html
+++ b/www/Main/templates/menu.html
@@ -27,9 +27,9 @@
         <ion-item menu-close ui-sref='logged.favourites' class="item item-icon-right">
           <i class="icon ion-ios-star-half positive"></i> Preferiti
         </ion-item>
-        <ion-item menu-close ui-sref='logged.message' class="item item-icon-right">
+        <!--<ion-item menu-close ui-sref='logged.message' class="item item-icon-right">
           <i class="icon ion-chatboxes dark"></i> Messaggi
-        </ion-item>
+        </ion-item>-->
         <ion-item menu-close ui-sref='logged.calendar' class="item item-icon-right">
           <i class="icon ion-calendar dark"></i> Calendario
         </ion-item>
